--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,54 @@
 /*  your css code here. If applicable */
+body{
+	background-color : #f5f5f5;
+	width:1050px;
+}
+
+.header{
+	background-color : #011e29;
+	color:white;
+	display:flex;
+	justify-content:center;
+	height:70px;
+	padding:0px;
+	
+}
+
+.holder{
+	display:grid;
+	grid-template-columns:250px 350px 350px;
+	margin:50px 50px 50px 50px;
+	grid-column-gap:5px;
+	
+	
+}
+
+.latest-news-section{
+	background-color:white;
+	border-radius:25px;
+	padding:20px;
+	text-align:center;
+	height:150px;
+}
+
+.Main-section{
+	background-color:white;
+	border-radius:25px;
+	padding:20px;
+	text-align:center;
+	height:220px;
+}
+
+
+.pictorial-news-section{
+	background-color:white;
+	border-radius:25px;
+	padding:20px;
+	text-align:center;
+	height:550px;
+}
+
+img{
+	height:150px;
+
+}
