--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@ body{
 	background-color : #011e29;
 	color:white;
 	display:flex;
+	text-align:center;
 	justify-content:center;
 	height:70px;
 	padding:0px;
